# polaris_cte_test

./: Dockerfile  Jenkinsfile  README.md
test_cross_track_error/: package.xml
test_cross_track_error/scripts/: pure_pursuit_sim_updated.py
test_cross_track_error/test/: ct_error_evaluation_test.py  pure_pursuit_cte_test.test
test_cte/: CMakeLists.txt  package.xml
test_cte/launch/: test_cte.launch
test_cte/scripts/: pure_pursuit_sim_updated.py
test_cte/tests/: test_pure_pursuit.py
test_cte/tests/waypoints/: wps.csv
test_cte/waypoints/: wps.csv
