<?xml version="1.0"?>
<package format="2">
  <name>test_cte</name>
  <version>0.1.0</version>
  <description>Test package for cross-track error in Pure Pursuit simulation</description>

  <maintainer email="pritishbisht@gmail.com">Pritish</maintainer>
  <license>BSD</license>

  <!-- ROS dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rostest</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>rostest</exec_depend>

  <!-- Dependency on the main package for running pure_pursuit_sim.py -->
  <depend>gem_pure_pursuit_sim</depend>

  <export>
    <!-- Export specific information for build systems -->
  </export>
</package>
